# gRPC_learn

./: .gitignore  CMakeLists.txt
demo_01/: CMakeLists.txt  client.cpp  msg.proto  server.cpp
demo_01/proto/: msg.grpc.pb.cc  msg.grpc.pb.h  msg.pb.cc  msg.pb.h  msg.proto
demo_02/: CMakeLists.txt
demo_03/: CMakeLists.txt  client.cpp  server.cpp
demo_03/protos/: param.grpc.pb.cc  param.grpc.pb.h  param.pb.cc  param.pb.h  param.proto
